--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "cypress-wait-until": "^1.6.1"
   },
   "scripts": {
-    "cypress:open": "cypress open"
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run --headed"
   }
 }
